# poc

./: .gitignore  README.md  compose.yml  mise.toml  package-lock.json  package.json  pyproject.toml
docker/metasploit-mcp/: Dockerfile
src/: __init__.py  agent.py
src/agents/: agent.py  nmap.py  root.py
src/agents/exploitation/: agent.py
src/agents/intelligence_gathering/: __init__.py  agent.py  nmap.py
src/agents/scanner/: __init__.py  agent.py  nmap.py
src/agents/vulnerability_analysis/: __init__.py  agent.py  metasploit.py
src/models/: __init__.py  gemini.py
src/utils/: metasploit.py  npm.py
